--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -11,7 +11,28 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+h1 {
+  text-align: center;
+}
+h2{
+  text-align: center;
+}
 .journal-list {
   list-style: none;
   padding: 0;
+}
+
+button{
+  background-color: rgb(159, 134, 134);
+}
+
+button:hover {
+  background-color: rgb(113, 36, 36);
+  color: white;
+  cursor: pointer;
+}
+
+.loading {
+  text-align: center;
+  font-weight: 900;
 }
