--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f4f4f4;
+  background-color: beige;
+  margin: 30px;
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
 }
+
